// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Tests components/HistoryTable/Cell ColumnHeaderCellStory 1`] = `
<div>
  <div
    class="css-t6ohyf-BaseCell-HeaderCell e1bcz5i61"
    data-cy="header-cell"
  >
    <a
      class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-s1d8jb"
      href="https://spruce.mongodb.com"
    >
      <span
        class="leafygreen-ui-1ewnca3"
      >
        displayName
      </span>
    </a>
  </div>
</div>
`;

exports[`Snapshot Tests components/HistoryTable/Cell EmptyCellStory 1`] = `
<div>
  <div
    class="css-azgjvx-BaseCell-Cell e1bcz5i62"
    data-cy="empty-cell"
  >
    <div
      class="css-8xlg5e-Circle e1bcz5i64"
    />
  </div>
</div>
`;

exports[`Snapshot Tests components/HistoryTable/Cell LoadingCellStory 1`] = `
<div>
  <div
    class="css-azgjvx-BaseCell-Cell e1bcz5i62"
    data-cy="loading-cell"
  >
    <div
      class="ant-skeleton ant-skeleton-element ant-skeleton-active"
    >
      <span
        class="ant-skeleton-avatar ant-skeleton-avatar-circle"
        style="width: 20px; height: 20px; line-height: 20px;"
      />
    </div>
  </div>
</div>
`;

exports[`Snapshot Tests components/HistoryTable/Cell TaskCellStory 1`] = `
<div>
  <div
    class="css-azgjvx-BaseCell-Cell e1bcz5i62"
    data-cy="task-cell"
  >
    <a
      href="/task/task-1"
    >
      <div
        class="css-1saonyd-Container e12dzyme2"
        data-cy="history-table-icon"
        data-status="success"
      >
        <div
          class="css-amsv4f-IconContainer e12dzyme1"
        >
          <svg
            aria-label="Checkmark Icon"
            class="leafygreen-ui-zgssm"
            fill="none"
            height="30"
            role="img"
            viewBox="0 0 16 16"
            width="30"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="m6.306 9.05 5.455-5.455a1 1 0 0 1 1.414 0l.707.707a1 1 0 0 1 0 1.414l-7.067 7.068a1 1 0 0 1-1.5-.098l-3.049-3.97a1 1 0 0 1 .184-1.402l.595-.457a1.25 1.25 0 0 1 1.753.23L6.306 9.05Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <p
          class="leafygreen-ui-1tb6tuo"
        />
      </div>
    </a>
  </div>
</div>
`;
